# file-monitor

./: .env-example  .gitignore  docker-restart.py  main.py  monitor.py  pyproject.toml
file_monitor/: __init__.py  config.py  docker_utils.py  file_change_handler.py  state.py
