[tool.poetry]
name = "file-monitor"
version = "1.0.0"
description = "File changes monitor"
authors = ["Sammy Barasa"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
watchdog = "^6.0.0"
python-dotenv = "^1.1.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
